Improvments in Invest Page

--- a/frontend/src/styles/invest.module.css
+++ b/frontend/src/styles/invest.module.css
@@ -32,8 +32,9 @@
 }
 
 .plans_container {
-    height: 88vh;
+    height: 82vh;
     background: #EFEFEF;
+    overflow: auto;
 }
 
 .plan_container {
