--- a/frontend/src/styles/profile.module.css
+++ b/frontend/src/styles/profile.module.css
@@ -86,6 +86,7 @@
     font-size: 3.4vh !important;
     color: #E86137;
 }
+
 .button_text {
     margin-left: 1vh !important;
 }
@@ -147,4 +148,20 @@
     width: 60vw;
     height: 6vh;
     border-radius: 0;
+}
+
+@media (min-width: 768px) {
+    .section_1 {
+        background-size: 208vh 28vh;
+    }
+
+    .section_1_1 {
+        padding-left: 50vh;
+        padding-top: 0;
+    }
+
+    .profile_section img {
+        height: auto;
+        width: auto;
+    }
 }
