Bind Bank Page Added

--- a/frontend/src/styles/withdraw.module.css
+++ b/frontend/src/styles/withdraw.module.css
@@ -120,7 +120,7 @@
 .bank_card .header_container p {
     margin-left: 4vw;
     font-weight: bolder;
-    font-size: 5vw;
+    font-size: 20px;
     color: white;
 }
 
